--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "65b452d4-dfcd-4026-b865-e3236ad5615d"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
